tests/ui/fail/invalid_not_in_operator.stderr
error: Expected `IN` after `NOT`, found `NULL`
 --> tests/ui/fail/invalid_not_in_operator.rs:6:17
  |
6 |         age NOT NULL AND i32  // Invalid operator
  |                 ^^^^

error: Supported operators are: ["=", "!=", ">", "<", ">=", "<=", "LIKE", "ILIKE", "IN", "NOT IN"]
 --> tests/ui/fail/invalid_not_in_operator.rs:6:17
  |
6 |         age NOT NULL AND i32  // Invalid operator
  |                 ^^^^

error: Failed to parse condition expression
 --> tests/ui/fail/invalid_not_in_operator.rs:6:9
  |
6 |         age NOT NULL AND i32  // Invalid operator
  |         ^^^

error[E0433]: failed to resolve: use of undeclared type `UserFilter`
  --> tests/ui/fail/invalid_not_in_operator.rs:11:19
   |
11 |     let _filter = UserFilter::new(25);
   |                   ^^^^^^^^^^ use of undeclared type `UserFilter`
